[package]
name = "rewrk"
version = "0.3.3"
authors = ["Harrison Burt <57491488+ChillFish8@users.noreply.github.com>", "Programatik <programatik29@gmail.com>", "Martin 'moechofe' Mauchauffée <moechofe@gmail.com"]
edition = "2018"

[dependencies]
anyhow = "1.0.58"
clap = "2"
colored = "2"
futures-util = "0.3.21"
http = "0.2.8"
hyper = { version = "0.14.19", features = ["runtime", "client", "http1", "http2"] }
native-tls = { version = "0.2.10", features = ["alpn"] }
pin-project-lite = "0.2"
regex = "1.5.6"
rand = "0.8.5"
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["rt", "rt-multi-thread", "net", "macros", "fs"] }
tokio-native-tls = "0.3"
tower = { version = "0.4.13", features = ["util"] }
